src/test/resources/typeSystemTestModels/valid/constructors/ConstructorFormalParametersDifferentName.java
package typeSystemTestModels.valid.constructors;

public class ConstructorFormalParametersDifferentName {

  public ConstructorFormalParametersDifferentName(int m, int n) {

  }

}
