src/test/resources/typeSystemTestModels/invalid/constructors/ConstructorFormalParametersDifferentName.java
package typeSystemTestModels.invalid.constructors;

public class ConstructorFormalParametersDifferentName{

  public ConstructorFormalParametersDifferentName(int n, double n) {

  }

}
